--- a/src/client/src/components/Card/styles.module.css
+++ b/src/client/src/components/Card/styles.module.css
@@ -1,46 +1,47 @@
 .loginContainer {
-    border: 0.5px solid #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 1em;
-    border-radius: 4px;
+  border: 0.5px solid #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 1em;
+  border-radius: 4px;
 }
 
 .selectionContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #0067B8;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #0067b8;
 }
 
 .buttonContainer {
-    display: flex;
+  display: flex;
+  cursor: pointer;
 }
 
 .signInButton {
-    margin-left: 10px;
-    font-size: 1em;
-    border: none;
+  margin-left: 10px;
+  font-size: 1em;
+  border: none;
 }
 
 .cardTitle {
-    margin-left: 10px;
-    font-weight: bold;
+  margin-left: 10px;
+  font-weight: bold;
 }
 
 .cardBody {
-    margin-bottom: 5%;
+  margin-bottom: 5%;
 }
 
 .cardTitleContainer {
-    display: flex;
-    align-items: center;
-    margin-bottom: 1em;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1em;
 }
 
 .details {
-    color: #54B4FF;
+  color: #54b4ff;
 }
 
 .icon {
-    height: 36px;
+  height: 36px;
 }
