--- a/src/client/src/components/CardBody/styles.module.css
+++ b/src/client/src/components/CardBody/styles.module.css
@@ -1,5 +1,5 @@
 .body {
-  font-size: 12px;
+  font-size: 13px;
   height: 100px;
   line-height: 1.75em;
 }
