--- a/src/client/src/components/LeftSidebar/styles.module.css
+++ b/src/client/src/components/LeftSidebar/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding-top: 20%;
+  padding-top: 15%;
 }
 
 .itemBorder {
