--- a/src/client/src/components/SelectableCard/styles.module.css
+++ b/src/client/src/components/SelectableCard/styles.module.css
@@ -33,8 +33,8 @@
 }
 
 .boundingBox {
-  max-width: 170px;
-  min-height: 219px;
+  max-width: 198px;
+  min-height: 239px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
